--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -66,6 +66,13 @@
     <Compile Include="Analysis\Cjk\CJKTokenizerFactory.cs" />
     <Compile Include="Analysis\Cjk\CJKWidthFilter.cs" />
     <Compile Include="Analysis\Cjk\CJKWidthFilterFactory.cs" />
+    <Compile Include="Analysis\Ckb\SoraniAnalyzer.cs" />
+    <Compile Include="Analysis\Ckb\SoraniNormalizationFilter.cs" />
+    <Compile Include="Analysis\Ckb\SoraniNormalizationFilterFactory.cs" />
+    <Compile Include="Analysis\Ckb\SoraniNormalizer.cs" />
+    <Compile Include="Analysis\Ckb\SoraniStemFilter.cs" />
+    <Compile Include="Analysis\Ckb\SoraniStemFilterFactory.cs" />
+    <Compile Include="Analysis\Ckb\SoraniStemmer.cs" />
     <Compile Include="Analysis\Cn\ChineseAnalyzer.cs" />
     <Compile Include="Analysis\Cn\ChineseFilter.cs" />
     <Compile Include="Analysis\Cn\ChineseFilterFactory.cs" />
@@ -447,6 +454,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Analysis\Cjk\stopwords.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Analysis\Ckb\stopwords.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
