--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Analysis\Cz\CzechStemFilter.cs" />
     <Compile Include="Analysis\Cz\CzechStemFilterFactory.cs" />
     <Compile Include="Analysis\Cz\CzechStemmer.cs" />
+    <Compile Include="Analysis\Da\DanishAnalyzer.cs" />
     <Compile Include="Analysis\De\GermanAnalyzer.cs" />
     <Compile Include="Analysis\De\GermanLightStemFilter.cs" />
     <Compile Include="Analysis\De\GermanLightStemFilterFactory.cs" />
@@ -457,6 +458,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Analysis\Ckb\stopwords.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Analysis\Snowball\danish_stop.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
