--- a/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
+++ b/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Analysis\Cz\TestCzechAnalyzer.cs" />
     <Compile Include="Analysis\Cz\TestCzechStemFilterFactory.cs" />
     <Compile Include="Analysis\Cz\TestCzechStemmer.cs" />
+    <Compile Include="Analysis\Da\TestDanishAnalyzer.cs" />
     <Compile Include="Analysis\De\TestGermanAnalyzer.cs" />
     <Compile Include="Analysis\De\TestGermanLightStemFilter.cs" />
     <Compile Include="Analysis\De\TestGermanLightStemFilterFactory.cs" />
