--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -174,6 +174,16 @@
     <Compile Include="Analysis\Fr\FrenchMinimalStemmer.cs" />
     <Compile Include="Analysis\Fr\FrenchStemFilter.cs" />
     <Compile Include="Analysis\Fr\FrenchStemmer.cs" />
+    <Compile Include="Analysis\Ga\IrishAnalyzer.cs" />
+    <Compile Include="Analysis\Ga\IrishLowerCaseFilter.cs" />
+    <Compile Include="Analysis\Ga\IrishLowerCaseFilterFactory.cs" />
+    <Compile Include="Analysis\Gl\GalicianAnalyzer.cs" />
+    <Compile Include="Analysis\Gl\GalicianMinimalStemFilter.cs" />
+    <Compile Include="Analysis\Gl\GalicianMinimalStemFilterFactory.cs" />
+    <Compile Include="Analysis\Gl\GalicianMinimalStemmer.cs" />
+    <Compile Include="Analysis\Gl\GalicianStemFilter.cs" />
+    <Compile Include="Analysis\Gl\GalicianStemFilterFactory.cs" />
+    <Compile Include="Analysis\Gl\GalicianStemmer.cs" />
     <Compile Include="Analysis\Miscellaneous\ASCIIFoldingFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\ASCIIFoldingFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\CapitalizationFilter.cs" />
@@ -255,6 +265,17 @@
     <Compile Include="Analysis\Payloads\TypeAsPayloadTokenFilterFactory.cs" />
     <Compile Include="Analysis\Position\PositionFilter.cs" />
     <Compile Include="Analysis\Position\PositionFilterFactory.cs" />
+    <Compile Include="Analysis\Pt\PortugueseAnalyzer.cs" />
+    <Compile Include="Analysis\Pt\PortugueseLightStemFilter.cs" />
+    <Compile Include="Analysis\Pt\PortugueseLightStemFilterFactory.cs" />
+    <Compile Include="Analysis\Pt\PortugueseLightStemmer.cs" />
+    <Compile Include="Analysis\Pt\PortugueseMinimalStemFilter.cs" />
+    <Compile Include="Analysis\Pt\PortugueseMinimalStemFilterFactory.cs" />
+    <Compile Include="Analysis\Pt\PortugueseMinimalStemmer.cs" />
+    <Compile Include="Analysis\Pt\PortugueseStemFilter.cs" />
+    <Compile Include="Analysis\Pt\PortugueseStemFilterFactory.cs" />
+    <Compile Include="Analysis\Pt\PortugueseStemmer.cs" />
+    <Compile Include="Analysis\Pt\RSLPStemmerBase.cs" />
     <Compile Include="Analysis\Query\QueryAutoStopWordAnalyzer.cs" />
     <Compile Include="Analysis\Reverse\ReverseStringFilter.cs" />
     <Compile Include="Analysis\Reverse\ReverseStringFilterFactory.cs" />
@@ -410,6 +431,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Analysis\Gl\galician.rslp" />
+    <EmbeddedResource Include="Analysis\Pt\portuguese.rslp" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -508,6 +531,13 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Analysis\Th\stopwords.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Analysis\Ga\stopwords.txt" />
+    <EmbeddedResource Include="Analysis\Gl\stopwords.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Analysis\Snowball\portuguese_stop.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
